--- a/package.json
+++ b/package.json
@@ -39,11 +39,6 @@
         "category": "IPCraft"
       },
       {
-        "command": "fpga-ip-core.generateVHDLWithBus",
-        "title": "Generate VHDL (Select Bus)",
-        "category": "IPCraft"
-      },
-      {
         "command": "fpga-ip-core.parseVHDL",
         "title": "Import from VHDL",
         "category": "IPCraft",
@@ -103,8 +98,8 @@
     "compile-tests": "tsc -p . --outDir out",
     "watch-tests": "tsc -p . -w --outDir out",
     "pretest": "npm run compile-tests && npm run compile && npm run lint",
-    "lint": "eslint src --ext ts,tsx",
-    "lint:fix": "eslint src --ext ts,tsx --fix",
+    "lint": "eslint src --max-warnings 0",
+    "lint:fix": "eslint src --fix",
     "format": "prettier --write \"src/**/*.{ts,tsx}\"",
     "format:check": "prettier --check \"src/**/*.{ts,tsx}\"",
     "type-check": "tsc --noEmit",
@@ -122,13 +117,19 @@
     "@testing-library/user-event": "^14.6.1",
     "@types/glob": "^8.1.0",
     "@types/jest": "^29.5.14",
+    "@types/js-yaml": "^4.0.9",
     "@types/node": "^20.19.33",
+    "@types/nunjucks": "^3.2.6",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "@types/vscode": "^1.80.0",
-    "@typescript-eslint/eslint-plugin": "^5.59.8",
-    "@typescript-eslint/parser": "^5.59.8",
+    "@typescript-eslint/eslint-plugin": "^8.56.0",
+    "@typescript-eslint/parser": "^8.56.0",
     "@vscode/test-electron": "^2.3.2",
+    "autoprefixer": "^10.4.24",
     "copy-webpack-plugin": "^13.0.1",
-    "eslint": "^8.41.0",
+    "css-loader": "^7.1.4",
+    "eslint": "^10.0.1",
     "glob": "^8.1.0",
     "husky": "^8.0.3",
     "identity-obj-proxy": "^3.0.0",
@@ -137,8 +138,12 @@
     "jest-environment-jsdom": "^29.7.0",
     "json-schema-to-typescript": "^13.0.0",
     "lint-staged": "^15.5.2",
-    "mocha": "^10.2.0",
+    "mini-css-extract-plugin": "^2.10.0",
+    "postcss": "^8.5.6",
+    "postcss-loader": "^8.2.1",
     "prettier": "^3.7.4",
+    "style-loader": "^4.0.0",
+    "tailwindcss": "^3.4.19",
     "ts-jest": "^29.4.6",
     "ts-loader": "^9.4.3",
     "typescript": "^5.1.3",
@@ -146,18 +151,12 @@
     "webpack-cli": "^5.1.1"
   },
   "dependencies": {
-    "@types/js-yaml": "^4.0.5",
-    "@types/nunjucks": "^3.2.6",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
     "@vscode/codicons": "^0.0.33",
     "@vscode/webview-ui-toolkit": "^1.2.2",
-    "css-loader": "^6.8.1",
     "js-yaml": "^4.1.0",
     "nunjucks": "^3.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "style-loader": "^3.3.3",
     "yaml": "^2.8.2"
   },
   "lint-staged": {
